--- a/CommonApp/src/main/res/layout/item_d.xml
+++ b/CommonApp/src/main/res/layout/item_d.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="230dp"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:background="@android:color/holo_red_dark">
+    android:background="@android:color/holo_red_dark"
+    tools:ignore="MissingDefaultResource">
 
     <TextView
         android:id="@+id/mtv"
