--- a/UiTreeModule/src/main/res/layout/fragment_main.xml
+++ b/UiTreeModule/src/main/res/layout/fragment_main.xml
@@ -7,9 +7,19 @@
     tools:context=".MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <com.mm.zdy.uitreemodule.view.tree.TreeView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <!--<com.mm.zdy.uitreemodule.view.tree.TreeView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--app:layout_constraintRight_toRightOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
