--- a/UiTreeModule/src/main/res/values/array.xml
+++ b/UiTreeModule/src/main/res/values/array.xml
@@ -8,4 +8,12 @@
         <item>#9E05AF</item>
         <item>#0A98BC</item>
     </array>
+
+    <declare-styleable name="BubbleView">
+        <attr name="originCircleRadius" format="dimension"/>
+        <attr name="originCircleColor" format="color"/>
+        <attr name="textContent" format="string"/>
+        <attr name="textColor" format="color"/>
+        <attr name="textSize" format="dimension"/>
+    </declare-styleable>
 </resources>
