--- a/UiTreeModule/src/main/res/layout/fragment_main.xml
+++ b/UiTreeModule/src/main/res/layout/fragment_main.xml
@@ -15,11 +15,33 @@
     <!--app:layout_constraintRight_toRightOf="parent"-->
     <!--app:layout_constraintTop_toTopOf="parent" />-->
 
+    <com.mm.zdy.uitreemodule.payedittext.CustomEditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:gravity="center_vertical"
+        android:textCursorDrawable="@color/colorPrimaryDark"
+        android:background="@color/colorPrimaryDark"
+        android:inputType="numberPassword"
+        android:maxLength="6"
+        android:maxLines="1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.mm.zdy.uitreemodule.imagetranslate_scale_rotate.CustomImageView
+        android:layout_width="match_parent"
+        android:background="@color/colorAccent"
+        android:scaleType="centerInside"
+        android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/img"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
